--- a/app/views/photos/_card.html.erb
+++ b/app/views/photos/_card.html.erb
@@ -33,7 +33,7 @@
                 <p class="card-text"><%= photo.description %></p>
             </div>
             <div class="post_createdAt">
-                <i class="fa fa-heart p-2 <%= current_user.photos_reactions.pluck(:photo_id).include?(photo.id) ? "" : "text-secondary" %>" style="color: var(--main_color);" role="button">
+                <i class="fa fa-heart p-2 <%= current_user && current_user.photos_reactions.pluck(:photo_id).include?(photo.id) ? "" : "text-secondary" %>" style="color: var(--main_color);" role="button">
                     <span id="number_of_like"><%= photo.number_like %></span>
                 </i>
                 <small class="text-body-secondary">
