--- a/app/views/albums/_photo_fields.html.erb
+++ b/app/views/albums/_photo_fields.html.erb
@@ -1,21 +1,34 @@
 <div class='nested-fields'>
-    <img
-        class="card text-white border-1 p-0 mt-4 mb-5 d-flex justify-content-center align-items-center"
-        style="
-            width: 200px;
-            height: 200px;
-            background-color: #f2f2f2;
-            border-style: dashed;
-            object-fit: cover;
-            cursor: pointer;
-        "
-        id="card-img"
-    >
-    <%= f.file_field(:image_url, class: "d-none", id: "files_inputs") %>
-  
-    <div class="links" style="margin-bottom: 10px;">
-      <%= link_to_remove_association "remove photo", f %>
-    </div>
+    <label class="card text-white border-1 p-0 mt-4 mb-5 d-flex justify-content-center align-items-center text-decoration-none" style="width: 200px;
+                                height: 200px;
+                                background-color: #f2f2f2;
+                                border-style: dashed;
+                                border-radius: 0.5rem;
+                                cursor: pointer;">
+        <img
+            class=""
+            style="
+                border-radius: 0.5rem;
+                object-fit: cover;
+                cursor: pointer;
+            "
+            id="card-img"
+        >
+        <%= f.file_field(:image_url, class: "d-none", id: "files_inputs") %>
+        <%= link_to_remove_association raw('
+                <i
+                    class="fa-solid fa-xmark"
+                    style="
+                        position: absolute;
+                        top: 2px;
+                        right: 10px;
+                        font-size: 1.5rem;
+                        color: #4f4f4f;
+                        cursor: pointer;
+                        -webkit-text-stroke: 3px #4f4f4f;
+                    "
+                ></i>'), f, id: "remove_photo_btn" %>
+    </label>
 </div>
 
 
