--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,4 +1,4 @@
-<main id="main" class="row m-0">
+<main id="main_new_album" class="row m-0">
     <!-- Sidebar -->
     <div class="sidebar d-none d-md-flex flex-column align-items-center col-2">
         <ul class="d-flex flex-column align-items-start w-auto">
@@ -19,3 +19,37 @@
 
     <div class="col-md-2"></div>
 </main>
+
+
+<script>
+    $("div.nested-fields:first #files_inputs").prop('disabled', true)
+    $("div.nested-fields:first").hide()
+    handle_preview($("div.nested-fields:last #files_inputs"), $("div.nested-fields:last #card-img"));
+    const add_photo_upload = document.getElementById("add_photo_upload");
+    add_photo_upload.addEventListener("click", function(){
+        setTimeout(() => {
+            handle_preview($("div.nested-fields:last #files_inputs"), $("div.nested-fields:last #card-img"));
+        }, 0)
+    });
+
+    function readURL(input, image) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function(e) {
+                image.attr('src', e.target.result)
+                image.css('width', "100%")
+                image.css('height', "100%")
+            }
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    function handle_preview(input_tag, image){
+        input_tag.on("change",function(e){
+            if (this.files.length){
+                var file = this.files[0];
+                readURL(this, image);
+            }
+        });
+    }
+</script>
