--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -14,7 +14,7 @@
             <hr style="width: 100%; border: 2px solid #555" />
         </div>
 
-        <%= render "photos/form", album: @album %>
+        <%= render "form", album: @album %>
     </div>
 
     <div class="col-md-2"></div>
