--- a/app/assets/stylesheets/photos/new.css
+++ b/app/assets/stylesheets/photos/new.css
@@ -1,5 +1,13 @@
 /* Main */
-#main .container_ {
+#main_new_photo {
+  width: 100%;
+  height: calc(100vh - var(--header-height));
+  margin-top: 5rem;
+  background-color: #f8f8f8;
+  padding: 0.8rem 0 0 0;
+}
+
+#main_new_photo .container_ {
   height: 100%;
   background-color: #ffffff;
   display: flex;
@@ -11,29 +19,29 @@
   padding: 1rem 2rem;
 }
 
-#main .container_ label {
+#main_new_photo .container_ label {
   font-weight: bold;
   margin-bottom: 0.2rem;
 }
 
-#main .container_ input[type="text"],
-#main .container_ select,
-#main .container_ textarea {
+#main_new_photo .container_ input[type="text"],
+#main_new_photo .container_ select,
+#main_new_photo .container_ textarea {
   padding: 0.5rem;
   border-radius: 5px;
   border: 2px solid #ccc;
   outline: none;
 }
 
-#main .container_ input[type="text"] {
+#main_new_photo .container_ input[type="text"] {
   width: 100%;
 }
 
-#main .container_ select {
+#main_new_photo .container_ select {
   width: 40%;
   font-weight: bold;
 }
 
-#main .container_ select option {
+#main_new_photo .container_ select option {
   font-weight: bold;
 }
