--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @album, class: "row", style: "width: 100%") do |f| %>
+<%= form_with(model: @photo, class: "row", style: "width: 100%") do |f| %>
     <div class="col-6">
         <%= f.label :title %><br/>
         <%= f.text_field :title, placeholder: "Photo Title", style: "width: 90%; margin-bottom: 1.5rem" %>
@@ -13,18 +13,36 @@
     </div>
 
     <div id="thumbnail-container" class="d-flex flex-wrap" style="gap: 1.5rem">
-        <%= f.fields_for :photos do |photo| %>
-            <%= render "albums/photo_fields", f: photo %>
-        <% end %>
-        <div class='links card text-white border-0 p-0 d-flex justify-content-center align-items-center text-decoration-none' style="width: 200px; height: 200px; background-color: transparent; cursor: pointer; margin-top:1.5rem">
-            <%= link_to_add_association raw('<i
-            class="fa-solid fa-plus"
-            style="
-                font-size: 4rem;
-                -webkit-text-stroke: 5px #bdbdbd;
-                color: #bdbdbd;
-            "
-        ></i>'), f, :photos, id: "add_photo_upload" %>
+        <div class='nested-fields'>
+            <label class="card text-white border-1 p-0 mt-4 mb-5 d-flex justify-content-center align-items-center text-decoration-none"
+            style="width: 200px;
+                    height: 200px;
+                    background-color: #f2f2f2;
+                    border-style: dashed;
+                    border-radius: 0.5rem;
+                    cursor: pointer;">
+                <img
+                    style="
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 0.5rem;
+                        object-fit: cover;
+                        cursor: pointer;
+                        display: none;
+                    "
+                    id="card-img"
+                >
+                <i
+                    class="fa-solid fa-plus"
+                    style="
+                        font-size: 4rem;
+                        -webkit-text-stroke: 5px #bdbdbd;
+                        color: #bdbdbd;
+                    "
+                    id="plus_icon"
+                ></i>
+                <%= f.file_field(:image_url, class: "d-none", id: "files_inputs") %>
+            </label>
         </div>
     </div>
 
