--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,4 +1,4 @@
-<main id="main" class="row m-0">
+<main id="main_new_photo" class="row m-0">
     <!-- Sidebar -->
     <%= render "layouts/sidebar" %>
 
@@ -14,3 +14,22 @@
 
     <div class="col-md-2"></div>
 </main>
+
+<script>
+    // Image preview
+    const cardImg = document.getElementById('card-img');
+    const filesInput = document.getElementById('files_inputs');
+
+    filesInput.addEventListener('change', (e) => {
+        const file = e.target.files[0];
+        const reader = new FileReader();
+
+        reader.onload = (e) => {
+            cardImg.src = e.target.result;
+            $("#plus_icon").hide();
+            $("img#card-img").css('display', 'block');
+        }
+
+        reader.readAsDataURL(file);
+    });
+</script>
