--- a/app/views/shared/_profile_nav.html.erb
+++ b/app/views/shared/_profile_nav.html.erb
@@ -3,24 +3,24 @@
     style="gap: 1rem; font-weight: bold"
 >
     <a class="navigation <%= 'active_profile_nav' if request.path.include?('photos')%>" href="/users/<%= params[:id] %>/photos">
-        <span>108</span> Photos
+        <span><%= @photo_count %></span> Photos
     </a>
 
     <span style="color: #aaa9a9;">|</span>
 
     <a class="navigation <%= 'active_profile_nav' if request.path.include?('albums')%>" href="/users/<%= params[:id] %>/albums">         
-        <span>43</span> Albums 
+        <span><%= @album_count %></span> Albums 
     </a>
 
     <span style="color: #aaa9a9;">|</span>
 
     <a class="navigation <%= 'active_profile_nav' if request.path.include?('followings')%>" href="/users/<%= params[:id] %>/followings">
-        <span>22</span> Followings 
+        <span><%= @following_count %></span> Followings 
     </a>
 
     <span style="color: #aaa9a9;">|</span>
 
     <a class="navigation <%= 'active_profile_nav' if request.path.include?('followers')%>" href="/users/<%= params[:id] %>/followers">
-        <span>13</span> Followers 
+        <span><%= @follower_count %></span> Followers 
     </a>
 </div>
