--- a/app/views/users/_show_album.html.erb
+++ b/app/views/users/_show_album.html.erb
@@ -1,24 +1,23 @@
-
 <% if @albums.present? %>
         <% @albums.each do |album| %>
             <div class="photo_container col-md-3 col-10 m-5 m-md-0">
                 <img
-                    src="<%= album.photos.first.image_url %>"
+                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : "" %>"
                     class="img-fluid"
-                    style="width: 100%; object-fit: cover"
-                    alt="photo"
+                    style="width: 100%; height: 255px; object-fit: cover"
+                    alt=""
                 />
                 <img
-                    src="<%= album.photos.first.image_url %>"
+                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : "" %>"
                     class="img-fluid"
-                    style="width: 100%; object-fit: fill"
-                    alt="photo"
+                    style="width: 100%; height: 255px; object-fit: cover"
+                    alt=""
                 />
                 <img
-                    src="<%= album.photos.first.image_url %>"
+                    src="<%= album.photos.count > 0 ? album.photos.first&.image_url : "" %>"
                     class="img-fluid"
-                    style="width: 100%; object-fit: fill"
-                    alt="photo"
+                    style="width: 100%; height: 255px; object-fit: cover"
+                    alt=""
                 />
                 <p style="position: absolute; top: 13rem; left: 1rem">
                     <%= album.title %>
