--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,11 +47,6 @@
         </div>
 
         <% if !request.path.include?('follow')  %>
-            <%
-=begin%>
- <%= link_to "Add <%= "Photo" if request.path.include?('photos') %>", , class: "btn btn-success align-self-end fw-bold" %> 
-<%
-=end%>
             <% if current_user && params[:id] == current_user.id.to_s %>
                 <%= link_to(request.path.include?('photos') ? new_photo_path : new_album_path, class: "btn btn-success align-self-end fw-bold mb-4") do %>
                     Add <%= request.path.include?('photos') ? "Photo" : "Album" %>
@@ -59,23 +54,12 @@
             <% else %>
                 <div class="mb-4"></div>
             <% end %>
-
-            <%
-=begin%>
- <button
-                class="btn btn-success align-self-end fw-bold"
-                style="border-radius: 1rem; padding: 0.2rem 1rem"
-            >
-                
-            </button> 
-<%
-=end%>
         <% else %>
             <div class="mb-4"></div>
         <% end %>
 
         
-        <div class="row list_items">
+        <div class="row list_items" style="gap: 1rem;">
             <!-- Photo -->
             <% if request.path.include?('photos') %>
                 <%= render 'show_photo' %>
@@ -84,63 +68,6 @@
             <% elsif request.path.include?('follow') %>
                 <%= render 'show_follow' %>
             <% end %>
-            <%
-=begin%>
- <div class="col-md-3 p-3">
-                <img
-                    src="https://shorturl.at/oJdb3"
-                    class="img-fluid card-img"
-                    alt="..."
-                />
-                <p class="card_img_des">Photo title goes here</p>
-            </div>
-
-            <div class="col-md-3 p-3">
-                <img
-                    src="https://shorturl.at/quAp3"
-                    class="img-fluid card-img"
-                    alt="..."
-                />
-                <p class="card_img_des">Photo title goes here</p>
-            </div>
-
-            <div class="col-md-3 p-3">
-                <img
-                    src="https://shorturl.at/cQQnA"
-                    class="img-fluid card-img"
-                    alt="..."
-                />
-                <p class="card_img_des">Photo title goes here</p>
-            </div>
-
-            <div class="col-md-3 p-3">
-                <img
-                    src="https://shorturl.at/c6kKx"
-                    class="img-fluid card-img"
-                    alt="..."
-                />
-                <p class="card_img_des">Photo title goes here</p>
-            </div>
-
-            <div class="col-md-3 p-3">
-                <img
-                    src="https://shorturl.at/Eergl"
-                    class="img-fluid card-img"
-                    alt="..."
-                />
-                <p class="card_img_des">Photo title goes here</p>
-            </div>
-
-            <div class="col-md-3 p-3">
-                <img
-                    src="https://t.ly/k9pr6"
-                    class="img-fluid card-img"
-                    alt="..."
-                />
-                <p class="card_img_des">Photo title goes here</p>
-            </div> 
-<%
-=end%>
         </div>
     </div>
 
