--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -52,4 +52,20 @@
             }
         });
     }
+
+    // Validate photos
+    const form = $('form.row');
+    const filesInput = document.getElementById('files_inputs');
+    form.on('submit', (e) => {
+        const title = $('#album_title').val();
+        const files = filesInput.files;
+        if (files.length === 0) {
+            e.preventDefault();
+            alert('Please select a file to upload');
+        }
+        if (title === '') {
+            e.preventDefault();
+            alert('Please enter a title');
+        }
+    });
 </script>
