--- a/app/views/users/_show_photo.html.erb
+++ b/app/views/users/_show_photo.html.erb
@@ -1,7 +1,7 @@
 <% if @photos.present? %>
     <div class="row list_photos_user">
         <% @photos.each do |photo| %>
-            <div class="col-md-3 position-relative">
+            <div class="photo_show_container col-md-3 position-relative">
                 <img
                     src="<%= photo.image_url ? photo.image_url : "/assets/images/default_avatar.jpg" %>"
                     class="img-fluid card-img"
@@ -25,6 +25,7 @@
                         <i class="fa fa-lock" style="color: black; font-size: 1.5rem"></i>
                     </div>
                 <% end %>
+                <%= link_to "EDIT", edit_photo_path(photo.id), class: "edit-button text-decoration-none" %>
             </div>
         <% end %>
     </div>
