--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -30,5 +30,8 @@
 
     <div>
         <%= f.submit "Save", class: "btn btn-success", style: "margin-right: 3rem" %>
+        <% if request.path.include?('edit') %>
+            <%= button_to "Delete", albums_path, class: "btn btn-danger", method: :delete %>
+        <% end %>
     </div>
 <% end %>
