--- a/app/views/albums/_photo_fields.html.erb
+++ b/app/views/albums/_photo_fields.html.erb
@@ -5,15 +5,20 @@
                                 border-style: dashed;
                                 border-radius: 0.5rem;
                                 cursor: pointer;">
-        <img
-            class=""
-            style="
-                border-radius: 0.5rem;
-                object-fit: cover;
-                cursor: pointer;
-            "
-            id="card-img"
-        >
+        <% if f.object %>
+            <img
+                src="<%= f.object.image_url %>"
+                class=""
+                style="
+                    width: 100%;
+                    height: 255px;
+                    border-radius: 0.5rem;
+                    object-fit: cover;
+                    cursor: pointer;
+                "
+                id="card-img"
+            >
+        <% end %>
         <%= f.file_field(:image_url, class: "d-none", id: "files_inputs") %>
         <%= link_to_remove_association raw('
                 <i
