--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -59,10 +59,12 @@
     form.on('submit', (e) => {
         const title = $('#album_title').val();
         const files = filesInput.files;
-        if (files.length === 0) {
-            e.preventDefault();
-            alert('Please select a file to upload');
-        }
+        console.log(filesInput)
+        console.log(files)
+        //if (files.length === 0) {
+        //    e.preventDefault();
+        //    alert('Please select a file to upload');
+        //}
         if (title === '') {
             e.preventDefault();
             alert('Please enter a title');
