--- a/app/views/users/_show_album.html.erb
+++ b/app/views/users/_show_album.html.erb
@@ -49,7 +49,9 @@
                         <i class="fa fa-lock" style="color: black; font-size: 1.5rem"></i>
                     </div>
                 <% end %>
-                <%= button_to "EDIT", "/albums/#{album.id}/edit", class: "edit-button" %>
+                <% if album.user.id == current_user.id %>
+                    <%= link_to "EDIT", edit_album_path(album.id), class: "edit-button text-decoration-none" %>
+                <% end %>
             </div>
         <% end %>
     </div>        
