--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -47,11 +47,9 @@
     </div>
 
     <div>
-        <%= f.submit "Save", class: "btn btn-success", style: "margin-right: 3rem" %>
-        <% if current_page?(edit_photo_path) %>
-            <button class="btn btn-danger">
-                <i class="fa-solid fa-trash-can"></i> Delete
-            </button>
+        <%= f.submit "Save", class: "btn btn-success", style: "margin-right: 3rem", method: :put %>
+        <% if request.path.include?('edit') %>
+            <%= link_to "Delete", @photo, class: "btn btn-danger", method: :delete %>
         <% end %>
     </div>
 <% end %>
