--- a/app/views/users/_show_photo.html.erb
+++ b/app/views/users/_show_photo.html.erb
@@ -25,7 +25,7 @@
                         <i class="fa fa-lock" style="color: black; font-size: 1.5rem"></i>
                     </div>
                 <% end %>
-                <% if photo.user.id == current_user.id.to_s %>
+                <% if photo.user_id == current_user.id %>
                     <%= link_to "EDIT", edit_photo_path(photo.id), class: "edit-button text-decoration-none" %>
                 <% end %>
             </div>
