--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     
   </head>
 
-  <body>
+  <body style="background-color: #f8f8f8">
     <%= render 'layouts/header' %>
     <%= yield %>
     <script >
