--- a/app/views/photos/discover.html.erb
+++ b/app/views/photos/discover.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag 'photos/index'%>
 <% provide(:title, "Discovers") %>
 
-<main id="main" class="photo_file row m-0">
+<main id="main" class="photo_file row m-0" style="height: 100%">
     <%= render "layouts/sidebar" %>
     <!-- Main content -->
     <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
