--- a/app/views/photos/photo_feeds.html.erb
+++ b/app/views/photos/photo_feeds.html.erb
@@ -12,7 +12,7 @@
             style="gap: 20px"
         >
             <% if !@photos || @photos.length == 0 %>
-                <h2>No photo </h2>
+                <h5 class="align-self-center m-auto">No photos </h5>
             <% else %>
                 <% @photos.each do |photo| %> 
                     <%= render 'card', photo: photo %>
@@ -82,6 +82,16 @@
     document.querySelectorAll('.fa-heart').forEach((icon) => {
         icon.addEventListener('click', (e) => {
             e.stopPropagation();
+        });
+    });
+
+    // Prevent propagation for user_info_part
+    document.querySelectorAll('.user_info_part').forEach((user_info_part) => {
+        user_info_part.addEventListener('click', (e) => {
+            e.stopPropagation();
+            // navigate to user profile
+            const userId = user_info_part.closest('.card').dataset.user;
+            window.location.href = `/users/${userId}/photos`;
         });
     });
 </script>
