--- a/app/views/shared/_modal_album.html.erb
+++ b/app/views/shared/_modal_album.html.erb
@@ -28,7 +28,8 @@
                                     <img
                                         src="<%= photo.image_url %>"
                                         class="d-block w-100"
-                                        alt="..."
+                                        style="object-fit: contain; height: 400px; margin-bottom: 1.5rem"
+                                        alt="photos of album"
                                     />
                                 </div>
                             <% else %>
@@ -36,7 +37,8 @@
                                     <img
                                         src="<%= photo.image_url %>"
                                         class="d-block w-100"
-                                        alt="..."
+                                        style="object-fit: contain; height: 400px; margin-bottom: 1.5rem"
+                                        alt="photos of album"
                                     />
                                 </div>
                             <% end %>
