--- a/app/assets/stylesheets/albums/new.css
+++ b/app/assets/stylesheets/albums/new.css
@@ -1,12 +1,10 @@
 /* Main */
 #main_new_album {
-  background-color: #f8f8f8;
   width: 100%;
-  height: 100%;
   padding: 0.8rem 0;
 }
 #main_new_album .container_ {
-  height: 100%;
+  min-height: calc(100vh - var(--header-height));
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
