--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,11 +1,6 @@
 <main id="main_new_album" class="row m-0">
     <!-- Sidebar -->
-    <div class="sidebar d-none d-md-flex flex-column align-items-center col-2">
-        <ul class="d-flex flex-column align-items-start w-auto">
-            <li><a href="">Feeds</a></li>
-            <li><a href="">My Photos</a></li>
-        </ul>
-    </div>
+    <%= render "layouts/sidebar" %>
 
     <!-- Main content -->
     <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
@@ -17,7 +12,7 @@
         <%= render "form", album: @album %>
     </div>
 
-    <div class="col-md-2"></div>
+    <div class="col-md-2" style="height: 100%"></div>
 </main>
 
 
