--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -4,7 +4,7 @@
         <%= f.text_field :title, placeholder: "Photo Title", style: "width: 90%; margin-bottom: 1.5rem" %>
 
         <%= f.label :sharing_mode %><br/>
-        <%= f.select :is_private, ['Public', 'Private'] %>
+        <%= f.select :is_private, options_for_select([['Public', false], ['Private', true]], selected: f.object.is_private) %>
     </div>
 
     <div class="col-6">
@@ -21,26 +21,29 @@
                     border-style: dashed;
                     border-radius: 0.5rem;
                     cursor: pointer;">
-                <img
-                    style="
-                        width: 100%;
-                        height: 100%;
-                        border-radius: 0.5rem;
-                        object-fit: cover;
-                        cursor: pointer;
-                        display: none;
-                    "
-                    id="card-img"
-                >
-                <i
-                    class="fa-solid fa-plus"
-                    style="
-                        font-size: 4rem;
-                        -webkit-text-stroke: 5px #bdbdbd;
-                        color: #bdbdbd;
-                    "
-                    id="plus_icon"
-                ></i>
+                <% if f.object.image_url.present? %>
+                    <img
+                        src="<%= f.object.image_url %>"
+                        style="
+                            width: 100%;
+                            height: 100%;
+                            border-radius: 0.5rem;
+                            object-fit: cover;
+                            cursor: pointer;
+                        "
+                        id="card-img"
+                    >
+                <% else %>
+                    <i
+                        class="fa-solid fa-plus"
+                        style="
+                            font-size: 4rem;
+                            -webkit-text-stroke: 5px #bdbdbd;
+                            color: #bdbdbd;
+                        "
+                        id="plus_icon"
+                    ></i>
+                <% end %>
                 <%= f.file_field(:image_url, class: "d-none", id: "files_inputs") %>
             </label>
         </div>
