--- a/app/views/shared/_modal_photo.html.erb
+++ b/app/views/shared/_modal_photo.html.erb
@@ -22,6 +22,7 @@
                 <img
                     src="<%= photo.image_url %>"
                     class="img-fluid w-100"
+                    style="object-fit: contain; height: 400px; margin-bottom: 1.5rem"
                     alt=""
                 />
                 <p>
