--- a/app/assets/stylesheets/users/show.css
+++ b/app/assets/stylesheets/users/show.css
@@ -1,12 +1,11 @@
 #public_profile_main {
   background-color: #f8f8f8;
   width: 100%;
-  height: calc(100vh - var(--header-height));
   padding: 0.8rem 0;
 }
 
 #public_profile_main .container_ {
-  height: 100%;
+  min-height: calc(100vh - var(--header-height));
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -89,7 +88,8 @@
   gap: -1rem;
 }
 
-#public_profile_main .photo_show_container .edit-button {
+#public_profile_main .photo_show_container .edit-button,
+#public_profile_main .photo_container .edit-button {
   top: 80%;
   left: 84%;
 }
