--- a/app/views/photos/_card.html.erb
+++ b/app/views/photos/_card.html.erb
@@ -33,11 +33,11 @@
                 <p class="card-text"><%= photo.description %></p>
             </div>
             <div class="post_createdAt">
-                <i class="fa fa-heart p-2 <%= current_user && current_user.photos_reactions.pluck(:photo_id).include?(photo.id) ? "" : "text-secondary" %>" style="color: var(--main_color);" role="button">
-                    <span id="number_of_like"><%= photo.number_like %></span>
+                <i class="fa fa-heart p-2 <%= current_user && current_user.photos_reactions.pluck(:photo_id).include?(photo.id) ? "" : "text-secondary" %>" style="color: var(--main_color); font-size: 1rem;" role="button">
+                    <span id="number_of_like" style="margin-left: 0.3rem;"><%= photo.number_like %></span>
                 </i>
                 <small class="text-body-secondary">
-                    <%= photo.created_at %>
+                    <%= photo.created_at.strftime("%T %F") %>
                 </small>
             </div>
         </div>
