--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,9 +21,16 @@
         <% if user_signed_in? %>
             <div class="post_user_info">
                     <div class="dropdown">
+                        
                         <% if current_user.avatar.present? %>
                             <img
                                 src="<%= current_user.avatar %>"
+                                style="width: 2.5rem; height: 2.5rem; border-radius: 50%;
+                                object-fit: cover"
+                            >
+                        <% elsif current_user.avatar_identifier.include?('https') %>
+                            <img
+                                src="<%=  current_user.avatar_identifier %>"
                                 style="width: 2.5rem; height: 2.5rem; border-radius: 50%;
                                 object-fit: cover"
                             >
